Update fetch URL in parseJson function to use HTTPS endpoint

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script>
     async function parseJson() {
       const input = document.getElementById("jsonInput").value;
-      const response = await fetch("http://localhost:8080/parse", {
+      const response = await fetch("https://kumardeepak07.github.io/Parse-JSON/parse", {
         method: "POST",
         headers: { "Content-Type": "application/json",
         "Access-Control-Allow-Origin": "https://localhost:3000/", // Uncomment this line if you want to allow all origins
