--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       const input = document.getElementById("jsonInput").value;
       const response = await fetch("https://parse-json-production.up.railway.app/parse", {
         method: "POST",
-        headers: { "Content-Type": "application/json",
-        "Access-Control-Allow-Origin": "https://localhost:3000/", // Uncomment this line if you want to allow all origins
+        headers: { "Content-Type": "application/json"
+         // Uncomment this line if you want to allow all origins
         },
         body: input
       });
